Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14603

signal 11 with short stacktrace

    XMLWordPrintable

Details

    • 10.0.34

    Description

      Stacktrace:

      2017-12-07 17:00:22 140314162034432 [Note] InnoDB: page_cleaner: 1000ms intended loop took 4062ms. The settings might not be optimal. (flushed=1968 and evicted=0, during the time.)
      171207 17:00:56 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.2.11-MariaDB-log
      key_buffer_size=67108864
      read_buffer_size=131072
      max_used_connections=28
      max_threads=302
      thread_count=29
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 938412 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x7f9c404435c8
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f9de4630d70 thread_stack 0x40000
      (my_addr_resolve failure: fork)
      /usr/sbin/mysqld(my_print_stacktrace+0x2e) [0x557ff44a844e]
      /usr/sbin/mysqld(handle_fatal_signal+0x30d) [0x557ff3f376dd]
      /lib64/libpthread.so.0(+0xf5e0) [0x7fb2ed1f05e0]
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              Richard Richard Stracke
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.25d
                  2.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.